# test_tesis_1

./: requirements.txt  resultado_final.py  resumen_arquitectura.md
python_orchestrator/: agent.py  chat.py  llm_client.py  main.py  planner.py  requirements.txt  skills_manager.py  state_manager.py  tool_executor.py  vision.py  worker.py
python_orchestrator/calcu2/: main.py
python_orchestrator/rbt/: rbt.py
python_orchestrator/skills/: actuate.SKILL.md  analyze.SKILL.md  check_sensors.SKILL.md  read_file.SKILL.md  system_bash.SKILL.md  write_file.SKILL.md
rust_core/: Cargo.toml
rust_core/src/: discovery.rs  main.rs  mqtt.rs
scripts/: mosquitto.conf  setup_bwrap.sh
scripts/tools/: actuate_relay.py  append_file.py  check_sensors.py  log_anomaly.py  read_file.py  system_bash.py  validate_python.py  write_file.py
src/: context_manager.py  generator.py  models.py  orchestrator.py  planner.py  validator.py
